src/main/deploy/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: bike-rent
  namespace: bicycle
spec:
  selector:
    app: bike-rent
  ports:
  - port: 80
    name: bike-rent
    targetPort: bike-rent
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bike-rent
  namespace: bicycle
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /bike-rent
    route:
    - destination:
        port:
          number: 80
        host: bike-rent.bicycle.svc.cluster.local
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bike-rent
  namespace: bicycle
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-rent
        ext: auth
    spec:
      imagePullSecrets:
      - name: docker-registry
      containers:
      - name: bike-rent
        image: eu.gcr.io/rso-bicycle/bike-rent:master
        imagePullPolicy: Always
        ports:
        - name: bike-rent
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 3
